--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemBaiTap.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemBaiTap.cshtml
@@ -1,7 +1,7 @@
-﻿@model QL_TrungTamAnhNgu.Models.KhoaHoc_GiamGia
+﻿@model QL_TrungTamAnhNgu.Models.BaiTap
 @using QL_TrungTamAnhNgu.Models
 @{
-    ViewBag.Title = "ThemKhoaHoc_GiamGia";
+    ViewBag.Title = "ThemBaiTap";
     Layout = "~/Views/Shared/_LayoutQuanTriVien.cshtml";
 }
 
@@ -9,7 +9,7 @@
     <header style="position: sticky; left:0 ; top: 0; background-color: #fff; display: flex; align-items: center; justify-content: space-between; padding: 0px 16px; border-bottom: 1px solid #edede9; height: 80px;">
         <div style="display: flex; align-items: center; column-gap: 8px;">
             <i class="fa-solid fa-bars" style="color: black; font-size: 20px;"></i>
-            <h2 style="font-size: 18px; color: #000; font-weight: 500;">Quản lý người dùng</h2>
+            <h2 style="font-size: 18px; color: #000; font-weight: 500;">Quản lý Trung tâm Anh ngữ Yola</h2>
         </div>
         <div style="position: relative">
             <button onclick="handleClickUser(event)" style="display: flex; align-items: center; column-gap: 4px; color: #000">
@@ -36,53 +36,54 @@
         <div class="d-flex gap-2 mt-2">
             <i style="color: #343a40" class="fa-solid fa-house"></i>
             <i class="fa-solid fa-angle-right"></i>
-            <span style="color: #343a40">Danh sách khóa học</span>
+            <span style="color: #343a40">Danh sách tài liệu khóa học</span>
             <i class="fa-solid fa-angle-right"></i>
-            <span style="color: #000; ">Thêm tài liệu cho khóa học</span>
+            <span style="color: #000; ">Thêm tài liệu</span>
         </div>
-        <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px; display: block">Thêm tài liệu cho khóa học</h1>
+        <div class="d-flex justify-content-between">
+            <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px; display: block">Thêm tài liệu khóa học</h1>
+            @if (TempData["ErrorMessageBaiTap"] != null)
+            {
+                <div class="alert alert-danger">
+                    @TempData["ErrorMessageBaiTap"]
+                </div>
+            }
+        </div>
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 10px; padding: 16px; border: 1px solid #dadada; width: 100%;">
-            <form class="myForm" action="/QuanTriVien/ThemKhoaHoc_GiamGia" method="post">
+            <form class="myForm" action="/QuanTriVien/ThemBaiTap" method="post">
                 <div style="width: 100%;">
                     <div class="d-flex justify-content-between gap-4">
                         <div style="width: 100%">
-                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MaTaiLieu">Tên giảm giá: </label>
-                            <select class="mt-2 form-control" id="MaGiamGia" name="MaGiamGia" required>
-                                @foreach (var kh in ViewBag.GiamGiaListView)
-                                {
-                                    if (kh.MaGiamGia == ViewBag.MaGiamGia)
-                                    {
-                                        <option value="@kh.MaGiamGia">@kh.MaGiamGia - @kh.TenGiamGia</option>
-                                    }
-                                }
-                            </select>
-                        </div>
-                        <div style="width: 100%">
-                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MaKhoaHoc">Tên khóa học: </label>
-                            <select class="mt-2 form-control" id="MaKhoaHoc" name="MaKhoaHoc" required>
-                                <option value="">-- Chọn Khóa học --</option>
-                                @foreach (var kh in ViewBag.KhoaHocListView)
-                                {
-                                    <option value="@kh.MaKhoaHoc">@kh.MaKhoaHoc - @kh.TenKhoaHoc</option>
-                                }
-                            </select>
+                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="TenTaiLieu">Tên bài tập: </label>
+                            @Html.TextBoxFor(model => model.TenBaiTap, new { @id = "TenBaiTap", @class = "form-control mt-2", placeholder = "Nhập tên bài tập" })
                         </div>
                     </div>
+                    <div style="margin-top: 15px; width: 100%">
+                        <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MoTa">Mô tả: </label>
+                        @Html.TextBoxFor(model => model.MoTa, new { @id = "MoTa", @class = "form-control mt-2", placeholder = "Nhập mô tả" })
+                    </div>
+                    <div style="margin-top: 15px; width: 100%">
+                        @Html.TextBoxFor(model => model.FileUpload, new { @style = "display: none;", @value = @Model.FileUpload, @id = "Avatar", @type = "file", @class = "form-control my-2" })
+                        <iframe id="avatarPreview" src="@Url.Content("~/Content/HinhAnh/TaiLieu/Chuong 3_Function.pdf")" width="100%" height="600px" style="border: 1px solid #ddd;"></iframe>
+                        <label for="Avatar" id="label" class="custom-file-upload mt-2" style="width: 150px; text-align: center; padding: 10px 12px; background-color: #0077b6; color: white; border-radius: 5px;">
+                            Chọn tập tin
+                        </label>
+                    </div>
+                </div>
+                <div>
+                    @if (TempData["ErrorMessage"] != null)
+                    {
+                        <div class="alert alert-danger">
+                            @TempData["ErrorMessage"]
+                        </div>
+                    }
                 </div>
                 <div style="margin-top: 10px; width: 100%" class="d-flex justify-content-end gap-2">
                     <button id="btnLuu" type="submit" class="btn btn-success">Tạo</button>
                 </div>
             </form>
         </div>
-        <div style="color: red;" class="mt-2">
-            <div>
-                @if (TempData["ErrorMessageKhoaHocTaiLieu"] != null)
-                {
-                    <div class="alert alert-danger">
-                        @TempData["ErrorMessageKhoaHocTaiLieu"]
-                    </div>
-                }
-            </div>
-        </div>
     </div>
 </div>
+
+
