--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/Shared/_LayoutGiangVien.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/Shared/_LayoutGiangVien.cshtml
@@ -13,7 +13,9 @@
     <link href="https://kendo.cdn.telerik.com/2024.1.119/styles/kendo.default-v2.min.css" rel="stylesheet" />
     <script src="https://kendo.cdn.telerik.com/2024.1.119/js/kendo.all.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
     <script src="~/Content/bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
     <script src="~/Content/tinymce/js/tinymce/tinymce.min.js"></script>
 
