--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/HocVien/ChuyenCan.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/HocVien/ChuyenCan.cshtml
@@ -1,5 +1,10 @@
 ﻿@model IEnumerable<QL_TrungTamAnhNgu.Models.view_dshocvien_diemdanh>
 
+@{
+    ViewBag.Title = "ChuyenCan";
+    Layout = "~/Views/Shared/_LayoutHocVien.cshtml";
+}
+
 <hr class="my-0">
 <div class="bg-light py-1 shadow-sm border-bottom mt-0">
     <div class="container">
