--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemBaiTap.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemBaiTap.cshtml
@@ -36,9 +36,9 @@
         <div class="d-flex gap-2 mt-2">
             <i style="color: #343a40" class="fa-solid fa-house"></i>
             <i class="fa-solid fa-angle-right"></i>
-            <span style="color: #343a40">Danh sách tài liệu khóa học</span>
+            <span style="color: #343a40">Danh sách bài tập khóa học</span>
             <i class="fa-solid fa-angle-right"></i>
-            <span style="color: #000; ">Thêm tài liệu</span>
+            <span style="color: #000; ">Thêm bài tập</span>
         </div>
         <div class="d-flex justify-content-between">
             <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px; display: block">Thêm tài liệu khóa học</h1>
@@ -64,7 +64,7 @@
                     </div>
                     <div style="margin-top: 15px; width: 100%">
                         @Html.TextBoxFor(model => model.FileUpload, new { @style = "display: none;", @value = @Model.FileUpload, @id = "Avatar", @type = "file", @class = "form-control my-2" })
-                        <iframe id="avatarPreview" src="@Url.Content("~/Content/HinhAnh/TaiLieu/Chuong 3_Function.pdf")" width="100%" height="600px" style="border: 1px solid #ddd;"></iframe>
+                        <iframe id="avatarPreview" src="" width="100%" height="600px" style="border: 1px solid #ddd;"></iframe>
                         <label for="Avatar" id="label" class="custom-file-upload mt-2" style="width: 150px; text-align: center; padding: 10px 12px; background-color: #0077b6; color: white; border-radius: 5px;">
                             Chọn tập tin
                         </label>
