--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemBaiTap.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemBaiTap.cshtml
@@ -41,7 +41,7 @@
             <span style="color: #000; ">Thêm bài tập</span>
         </div>
         <div class="d-flex justify-content-between">
-            <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px; display: block">Thêm tài liệu khóa học</h1>
+            <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px; display: block">Thêm bài tập khóa học</h1>
             @if (TempData["ErrorMessageBaiTap"] != null)
             {
                 <div class="alert alert-danger">
