--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemPhongHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemPhongHoc.cshtml
@@ -37,12 +37,12 @@
         <div class="d-flex gap-2 mt-2">
             <i style="color: #343a40" class="fa-solid fa-house"></i>
             <i class="fa-solid fa-angle-right"></i>
-            <span style="color: #343a40">Danh sách học viên</span>
+            <span style="color: #343a40">Danh sách phòng học</span>
             <i class="fa-solid fa-angle-right"></i>
-            <span style="color: #000; ">Chi tiết</span>
+            <span style="color: #000; ">Thêm phòng học</span>
         </div>
         <div class="d-flex justify-content-between">
-            <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px; display: block">Thêm học viên</h1>
+            <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px; display: block">Thêm phòng học</h1>
         </div>
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 10px; padding: 16px; border: 1px solid #dadada; width: 100%;">
             <form class="myForm" action="/QuanTriVien/ThemPhongHoc" method="post">
