--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/HocVien/ThongTinNguoiDung.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/HocVien/ThongTinNguoiDung.cshtml
@@ -75,7 +75,7 @@
                 <div class="card-body">
                     <p>Bạn có thể sử dụng các địa chỉ email sau đây để đăng nhập vào tài khoản của bạn và đặt lại mật khẩu nếu bạn quên.</p>
                     <div class="d-flex align-items-center">
-                        <img src="~/Content/HinhAnh/GiaoDien/email-icon.png" width="20" alt="Email icon" class="me-2" />
+                        <img src="~/Content/HinhAnh/GiaoDien/email-icon.jpg" width="20" alt="Email icon" class="me-2" />
                         <p class="mb-0" id="email">@ViewBag.Email <span class="text-muted"> - Đã xác thực</span></p>
                     </div>
                     <div class="text-center mt-3">
@@ -91,7 +91,7 @@
                 <div class="card-body">
                     <p class="text-muted">Bạn có thể sử dụng số điện thoại dưới đây để đăng nhập vào tài khoản của bạn và nhận thông báo nếu cần.</p>
                     <div class="d-flex align-items-center">
-                        <img src="~/Content/HinhAnh/GiaoDien/phone-icon.png" width="20" alt="Phone icon" class="me-2" />
+                        <img src="~/Content/HinhAnh/GiaoDien/phone-icon.jpg" width="20" alt="Phone icon" class="me-2" />
                         <p class="mb-0" id="soDienThoai">@ViewBag.SoDienThoai <span class="text-muted"> - Đã xác thực</span></p>
                     </div>
                     <div class="text-center mt-3">
