--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemLichHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemLichHoc.cshtml
@@ -26,13 +26,13 @@
         <div class="col-md-6">
             <div class="form-group">
                 <label for="ThoiGianBatDau">Thời gian bắt Đầu:</label>
-                <input type="time" class="mt-2 form-control" id="ThoiGianBatDau" name="ThoiGianBatDau" required>
+                <input type="text" class="mt-2 form-control" id="ThoiGianBatDau" name="ThoiGianBatDau" required>
             </div>
         </div>
         <div class="col-md-6">
             <div class="form-group">
                 <label for="ThoiGianKetThuc">Thời gian kết Thúc:</label>
-                <input type="time" class="mt-2 form-control" id="ThoiGianKetThuc" name="ThoiGianKetThuc" required>
+                <input type="text" class="mt-2 form-control" id="ThoiGianKetThuc" name="ThoiGianKetThuc" required>
             </div>
         </div>
     </div>
